--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #24272e;
+    background-color: white;
 
 }
 header{
@@ -16,15 +16,48 @@ header >h1{
     color:white;
     font-family:  sans-serif;
 }
-.result{
+.grid{
+    display: flex;
+    padding: 10px;
+    text-align: center;
+    margin: auto 30%;
+}
+.container{
+    display:inline-block;
+    word-wrap: break-word;
     position: relative;
-    margin: 20px auto;
-    border: 3px solid white;
+    margin: 20px;
+    box-shadow: lightgray 0px 0px 6px;
     border-radius: 4px;
-    width: 200px;
+    width: 400px;
+    height: 400px;
     text-align: center;
     color:#24272e ;
-    font-size: 32px;
+    font-size: 24px;
     padding: 15px 20px;
     font-family: sans-serif;
+}
+.click_point{
+    display: inline-block;
+    margin: 20px 60px;
+    padding: 10px;
+    /* border: 4px solid #24272e; */    
+}
+.click_point >button{
+    display: block;
+    border-radius: 50%;
+    border: none;
+    width: 100px;
+    height: 100px;
+    box-shadow: lightgray 0px 0px 6px;
+    font-size: 18px;
+
+}
+.moves{
+    text-align: center;
+}
+.button_pressed{
+    transition: 0.1s ease;
+    background-color: #04941c;
+    color: white;
 }
